[tool.poetry]
name = "get-papers-list"
version = "0.1.0"
description = "A command-line tool to fetch research papers from PubMed and identify those with pharmaceutical/biotech company affiliations"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "get_papers_list"}]

[tool.poetry.dependencies]
python = "^3.8.1"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
flake8 = "^6.0.0"

[tool.poetry.scripts]
get-papers-list = "get_papers_list.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"